# RustFall2024

Assignment1/: Cargo.toml
Assignment1/src/: main.rs
Assignment2/: Cargo.toml
Assignment2/src/: main.rs
Assignment3/: Cargo.toml
Assignment3/src/: main.rs
Enum/src/: main.rs
StructFile/: Cargo.toml
StructFile/src/: main.rs
Website_Status_Checker/: Cargo.toml  links.txt
Website_Status_Checker/src/: config.rs  main.rs  monitor.rs  testing.rs  worker.rs
data_loader/: Cargo.toml  bitcoin.txt  ethereum.txt  sp500.txt
data_loader/src/: main.rs
hello_david/src/: main.rs
io_operation/: Cargo.toml  User_Info.txt
io_operation/src/: main.rs
rust_testing/src/: bank_account.rs  main.rs
