[package]
name = "data_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
ureq = { version = "2.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }


[dependencies.reqwest]
version = "0.11.27"
features = ["blocking", "json","rustls-tls"]
default-features = false
